Missed one other Java 11 feature